fix delete on mobile duration regex and save btn

--- a/src/app/modules/practice-hours/pages/practice-hours.component.scss
+++ b/src/app/modules/practice-hours/pages/practice-hours.component.scss
@@ -7,6 +7,9 @@
   }
 }
 
+.m-t-2 {
+  margin-top: 2px;
+}
 
 @media (max-width: 680px) {
   .pr-hr-main-wrapper {
